@@ -527,35 +527,6 @@ class IMP_Hooks
 
 
     /**
-     * Allow additional information to be added/edited from the data that is
-     * passed to the mailbox display template:
-     *
-     *   imp/templates/dynamic/msglist_[horiz|vert].html
-     *
-     * If you are going to add new columns, you also have to update the
-     * fields in imp/themes/dynamic/screen.css to specify the column width.
-     *
-     * @param array $msgs  The mailbox data.
-     *
-     * @return array  The altered array to use in the template.
-     */
-//    public function mailboxarray($msgs)
-//    {
-//        // Example #1: Adds a 'foo' entry to each message element.
-//        switch ($GLOBALS['registry']->getView()) {
-//        case Horde_Registry::VIEW_BASIC:
-//        case Horde_Registry::VIEW_DYNAMIC:
-//            foreach (array_keys($msgs) as $key) {
-//                $msgs[$key]['foo'] = true;
-//            }
-//            break;
-//        }
-//
-//        return $msg;
-//    }
-
-
-    /**
      * Default browser-based preference values for the dynamic view.
      * Any value not returned here will use the default value (listed below).
      *
